crates/bsql/tests/compile_fail/sql_injection.stderr
error: multiple statements not allowed — use separate query! calls. Semicolons are not permitted in bsql queries.
 --> tests/compile_fail/sql_injection.rs:2:13
  |
2 |     let _ = bsql::query!("SELECT 1; DROP TABLE users");
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `bsql::query` (in Nightly builds, run with -Z macro-backtrace for more info)
